data/diff_tests/wasmtime/unreachable_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1684.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\9c\80\80\80\00\01\04\74\65\73\74\13"
    "\66\75\6e\63\57\69\74\68\55\6e\72\65\61\63\68\61"
    "\62\6c\65\00\00\03\82\80\80\80\00\01\00\0a\97\80"
    "\80\80\00\01\91\80\80\80\00\01\01\7f\03\40\10\00"
    "\21\00\41\00\0d\00\0b\41\01\0b"
  )
""
)